traces/bug_600.txt
src/Graphics/sansrgraph.cpp:749: error: DEAD_STORE
  The value written to &xleft (type float) is never used.
Showing all 1 steps of the trace


src/Graphics/sansrgraph.cpp:749:3: Write of unused value
747.     float xmin,xmax,ymin,ymax;
748.     getcadre(xmin,xmax,ymin,ymax);
749.     float xleft = xmax - (xmax-xmin)*0.1;
         ^
750.     float ytop  = ymax;
751.     float ydelta = (ymax-ymin)/40;
